--- a/RESTfulBlogApp/package.json
+++ b/RESTfulBlogApp/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express-sanitizer": "^1.0.4",
     "method-override": "^3.0.0"
   }
 }
