--- a/YelpCamp/package.json
+++ b/YelpCamp/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.3.9"
+    "express-session": "^1.15.6",
+    "mongoose": "^5.3.9",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1"
   }
 }
