--- a/YelpCamp/package.json
+++ b/YelpCamp/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "method-override": "^3.0.0",
     "mongoose": "^5.3.9",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
