--- a/YelpCamp/package.json
+++ b/YelpCamp/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "method-override": "^3.0.0",
